:bulb: Improve WebSocket Javadoc and migrate to Http constants