@@ -24,14 +24,12 @@ import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
 
-import org.miaixz.bus.core.instance.Instances;
 import org.miaixz.bus.core.lang.Symbol;
 import org.miaixz.bus.core.lang.exception.ProtocolException;
 import org.miaixz.bus.core.lang.exception.ValidateException;
-import org.miaixz.bus.core.net.HTTP;
+import org.miaixz.bus.core.net.Http;
 
 /**
  * Immutable case-insensitive header collection with insertion-ordered multi-values.
@@ -42,9 +40,19 @@ import org.miaixz.bus.core.net.HTTP;
 public class Headers {
 
     /**
+     * Shared immutable empty headers.
+     */
+    private static final Headers EMPTY = new Headers(new String[0], false);
+
+    /**
      * Header names and values stored as adjacent pairs.
      */
     private final String[] namesAndValues;
+
+    /**
+     * Precomputed lowercase ASCII name hashes indexed by header-pair position.
+     */
+    private final int[] nameHashes;
 
     /**
      * Lazily initialized immutable map view.
@@ -68,6 +76,10 @@ public class Headers {
      */
     private Headers(final String[] namesAndValues, final boolean copy) {
         this.namesAndValues = namesAndValues.length == 0 || !copy ? namesAndValues : namesAndValues.clone();
+        this.nameHashes = new int[this.namesAndValues.length >>> 1];
+        for (int index = 0; index < this.namesAndValues.length; index += 2) {
+            this.nameHashes[index >>> 1] = asciiLowerHash(this.namesAndValues[index]);
+        }
     }
 
     /**
@@ -76,7 +88,7 @@ public class Headers {
      * @return empty headers
      */
     public static Headers empty() {
-        return Instances.get(Headers.class.getName() + ".empty", () -> new Headers(new String[0], false));
+        return EMPTY;
     }
 
     /**
@@ -139,8 +151,9 @@ public class Headers {
      * @return last value or null
      */
     public String get(final String name) {
+        final int hash = asciiLowerHash(name);
         for (int i = namesAndValues.length - 2; i >= 0; i -= 2) {
-            if (asciiEqualsIgnoreCase(name, namesAndValues[i])) {
+            if (nameHashes[i >>> 1] == hash && asciiEqualsIgnoreCase(name, namesAndValues[i])) {
                 return namesAndValues[i + 1];
             }
         }
@@ -154,10 +167,11 @@ public class Headers {
      * @return immutable values
      */
     public List<String> values(final String name) {
+        final int hash = asciiLowerHash(name);
         ArrayList<String> result = null;
         String first = null;
         for (int i = 0; i < namesAndValues.length; i += 2) {
-            if (asciiEqualsIgnoreCase(name, namesAndValues[i])) {
+            if (nameHashes[i >>> 1] == hash && asciiEqualsIgnoreCase(name, namesAndValues[i])) {
                 if (first == null) {
                     first = namesAndValues[i + 1];
                 } else {
@@ -182,8 +196,9 @@ public class Headers {
      * @return true when present
      */
     public boolean contains(final String name) {
+        final int hash = asciiLowerHash(name);
         for (int i = 0; i < namesAndValues.length; i += 2) {
-            if (asciiEqualsIgnoreCase(name, namesAndValues[i])) {
+            if (nameHashes[i >>> 1] == hash && asciiEqualsIgnoreCase(name, namesAndValues[i])) {
                 return true;
             }
         }
@@ -227,7 +242,7 @@ public class Headers {
     public long contentLength() {
         String value = null;
         for (int index = 0; index < namesAndValues.length; index += 2) {
-            if (asciiEqualsIgnoreCase(HTTP.CONTENT_LENGTH, namesAndValues[index])) {
+            if (asciiEqualsIgnoreCase(Http.Header.CONTENT_LENGTH, namesAndValues[index])) {
                 if (value != null) {
                     throw new ProtocolException("Content-Length must be unique");
                 }
@@ -263,13 +278,26 @@ public class Headers {
     public Headers with(final String name, final String value) {
         final String checkedName = validateName(name);
         final String checkedValue = validateValue(value);
-        int retained = 0;
+        int matches = 0;
+        int matchedIndex = -1;
         for (int index = 0; index < namesAndValues.length; index += 2) {
-            if (!asciiEqualsIgnoreCase(checkedName, namesAndValues[index])) {
-                retained += 2;
+            if (asciiEqualsIgnoreCase(checkedName, namesAndValues[index])) {
+                matches++;
+                matchedIndex = index;
             }
         }
-        final String[] pairs = new String[retained + 2];
+        if (matches == 0) {
+            final String[] pairs = Arrays.copyOf(namesAndValues, namesAndValues.length + 2);
+            pairs[namesAndValues.length] = checkedName;
+            pairs[namesAndValues.length + 1] = checkedValue;
+            return new Headers(pairs, false);
+        }
+        if (matches == 1 && matchedIndex == namesAndValues.length - 2
+                && namesAndValues[matchedIndex].equals(checkedName)
+                && namesAndValues[matchedIndex + 1].equals(checkedValue)) {
+            return this;
+        }
+        final String[] pairs = new String[namesAndValues.length - matches * 2 + 2];
         int target = 0;
         for (int index = 0; index < namesAndValues.length; index += 2) {
             if (!asciiEqualsIgnoreCase(checkedName, namesAndValues[index])) {
@@ -290,19 +318,31 @@ public class Headers {
      */
     public Headers without(final String name) {
         final String checkedName = validateName(name);
-        int retained = 0;
+        int matches = 0;
+        int matchedIndex = -1;
         for (int index = 0; index < namesAndValues.length; index += 2) {
-            if (!asciiEqualsIgnoreCase(checkedName, namesAndValues[index])) {
-                retained += 2;
+            if (asciiEqualsIgnoreCase(checkedName, namesAndValues[index])) {
+                matches++;
+                matchedIndex = index;
             }
         }
-        if (retained == namesAndValues.length) {
+        if (matches == 0) {
             return this;
         }
-        if (retained == 0) {
+        if (matches * 2 == namesAndValues.length) {
             return empty();
         }
-        final String[] pairs = new String[retained];
+        final String[] pairs = new String[namesAndValues.length - matches * 2];
+        if (matches == 1) {
+            System.arraycopy(namesAndValues, 0, pairs, 0, matchedIndex);
+            System.arraycopy(
+                    namesAndValues,
+                    matchedIndex + 2,
+                    pairs,
+                    matchedIndex,
+                    namesAndValues.length - matchedIndex - 2);
+            return new Headers(pairs, false);
+        }
         int target = 0;
         for (int index = 0; index < namesAndValues.length; index += 2) {
             if (!asciiEqualsIgnoreCase(checkedName, namesAndValues[index])) {
@@ -348,18 +388,30 @@ public class Headers {
      * @return immutable map snapshot
      */
     private Map<String, List<String>> buildMapSnapshot() {
-        final LinkedHashMap<String, String> names = new LinkedHashMap<>();
-        final LinkedHashMap<String, ArrayList<String>> values = new LinkedHashMap<>();
+        if (namesAndValues.length == 0) {
+            return Map.of();
+        }
+        final LinkedHashMap<String, List<String>> values = new LinkedHashMap<>(namesAndValues.length / 2);
         for (int i = 0; i < namesAndValues.length; i += 2) {
-            final String key = namesAndValues[i].toLowerCase(Locale.ROOT);
-            names.putIfAbsent(key, namesAndValues[i]);
-            values.computeIfAbsent(key, ignored -> new ArrayList<>(2)).add(namesAndValues[i + 1]);
+            final String name = namesAndValues[i];
+            String existingName = null;
+            for (final String candidate : values.keySet()) {
+                if (asciiEqualsIgnoreCase(candidate, name)) {
+                    existingName = candidate;
+                    break;
+                }
+            }
+            if (existingName == null) {
+                values.put(name, List.of(namesAndValues[i + 1]));
+                continue;
+            }
+            final List<String> existing = values.get(existingName);
+            final ArrayList<String> combined = new ArrayList<>(existing.size() + 1);
+            combined.addAll(existing);
+            combined.add(namesAndValues[i + 1]);
+            values.put(existingName, List.copyOf(combined));
         }
-        final LinkedHashMap<String, List<String>> copy = new LinkedHashMap<>();
-        for (final Map.Entry<String, ArrayList<String>> entry : values.entrySet()) {
-            copy.put(names.get(entry.getKey()), Collections.unmodifiableList(new ArrayList<>(entry.getValue())));
-        }
-        return Collections.unmodifiableMap(copy);
+        return Map.copyOf(values);
     }
 
     /**
@@ -398,6 +450,10 @@ public class Headers {
 
     /**
      * Compares validated ASCII header names without Unicode case folding.
+     *
+     * @param left  first validated header name
+     * @param right second validated header name
+     * @return {@code true} when the names match ignoring ASCII case
      */
     private static boolean asciiEqualsIgnoreCase(final String left, final String right) {
         if (left == right) {
@@ -420,6 +476,27 @@ public class Headers {
             }
         }
         return true;
+    }
+
+    /**
+     * Computes a case-insensitive ASCII hash without creating a lowercase string.
+     *
+     * @param value header name to hash, or null
+     * @return lowercase ASCII hash, or zero for null
+     */
+    private static int asciiLowerHash(final String value) {
+        if (value == null) {
+            return 0;
+        }
+        int hash = 0;
+        for (int index = 0; index < value.length(); index++) {
+            char current = value.charAt(index);
+            if (current >= 'A' && current <= 'Z') {
+                current = (char) (current + ('a' - 'A'));
+            }
+            hash = 31 * hash + current;
+        }
+        return hash;
     }
 
     /**
@@ -463,7 +540,7 @@ public class Headers {
          * Creates an empty builder.
          */
         private Builder() {
-            this.namesAndValues = new String[20];
+            this.namesAndValues = new String[8];
         }
 
         /**
@@ -473,7 +550,7 @@ public class Headers {
          */
         private Builder(final Headers headers) {
             this.size = headers.namesAndValues.length;
-            this.namesAndValues = Arrays.copyOf(headers.namesAndValues, Math.max(20, size + 2));
+            this.namesAndValues = Arrays.copyOf(headers.namesAndValues, Math.max(8, size + 2));
         }
 
         /**
@@ -530,6 +607,28 @@ public class Headers {
                 return empty();
             }
             return new Headers(Arrays.copyOf(namesAndValues, size), false);
+        }
+
+        /**
+         * Reuses an immutable candidate when this builder contains the same ordered pairs.
+         *
+         * @param candidate immutable candidate, or null
+         * @return candidate on an exact match, otherwise a newly built snapshot
+         */
+        public Headers buildOrReuse(final Headers candidate) {
+            if (candidate != null && candidate.namesAndValues.length == size) {
+                boolean same = true;
+                for (int index = 0; index < size; index++) {
+                    if (!namesAndValues[index].equals(candidate.namesAndValues[index])) {
+                        same = false;
+                        break;
+                    }
+                }
+                if (same) {
+                    return candidate;
+                }
+            }
+            return build();
         }
 
         /**
